# Sciy

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai_chat.py  alerts.py  auth.py  erp_sync.py  forecasts.py  import_export.py  inventory.py  inventory_analysis.py  notifications.py  products.py  router.py  suppliers.py  users.py  warehouses.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/crud/: __init__.py  alert.py  base.py  forecast.py  inventory.py  inventory_analysis.py  product.py  user.py
backend/app/db/: base.py  engine.py  init_timescaledb.py
backend/app/models/: __init__.py  alert_event.py  alert_rule.py  demand_forecast.py  erp_sync.py  erp_sync_log.py  import_export.py  inventory_snapshot.py  inventory_transaction.py  notification.py  notification_log.py  product.py  supplier.py  user.py  warehouse.py
backend/app/schemas/: __init__.py  ai.py  alert.py  common.py  erp_sync.py  forecast.py  import_export.py  inventory.py  inventory_analysis.py  notification.py  product.py  supplier.py  user.py  warehouse.py
backend/app/services/: __init__.py  ai_agent_service.py  alert_engine.py  anomaly_service.py  erp_sync_service.py  forecast_service.py  import_service.py  inventory_analysis_service.py  llm_forecast_service.py  notification_service.py  safety_stock_service.py
backend/app/tasks/: __init__.py  anomaly_tasks.py  erp_sync_tasks.py  forecast_tasks.py  notification_tasks.py
backend/app/utils/: __init__.py  excel_parser.py  websocket_manager.py
backend/tests/: conftest.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.vue  main.ts
frontend/src/api/: ai.ts  alerts.ts  auth.ts  forecasts.ts  inventory.ts  products.ts  request.ts
frontend/src/composables/: useAIChat.ts  useBarcodeScanner.ts  useResponsive.ts  useWebSocket.ts
frontend/src/layouts/: MobileLayout.vue  PcLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: variables.scss
frontend/src/views/: LoginView.vue
frontend/src/views/mobile/: AIChatMobileView.vue  AlertsView.vue  CheckView.vue  HomeView.vue  ScanView.vue
(+10 files in other folders)
